--- a/test/examples/visualize/manual-tests/c3.html
+++ b/test/examples/visualize/manual-tests/c3.html
@@ -89,38 +89,7 @@
       /**
        * MASS TEST
        */
-      keen.run(multiline, function(res){
-        var newData = res;
-        for (var i = 0; i < res.result.length; i++) {
-          for (var j = 0; j < res.result[i].value.length; j++) {
-            newData.result[i].value[j].result = Math.floor(Math.random() * (500 - 100 + 1)) + 100;
-          }
-        }
-        this.data = newData;
-
-        for(i = 0; i < chartTypes.length; i++) {
-          var div = document.createElement('div');
-          document.querySelector('body').appendChild(div);
-          if(chartTypes[i] === 'pie' || chartTypes[i] === 'donut') {
-            chartOptions = optionTwo;
-          } else {
-            chartOptions = optionOne;
-          }
-
-          new Keen.Visualization(this, div, {
-            library: "c3",
-            chartType: chartTypes[i],
-            chartOptions: chartOptions,
-            labelMapping: labelMapping
-          });
-
-        }
-      });
-
-      /**
-       * SINGLE TESTS
-       */
-      // keen.run(multiline, function(res) {
+      // keen.run(multiline, function(res){
       //   var newData = res;
       //   for (var i = 0; i < res.result.length; i++) {
       //     for (var j = 0; j < res.result[i].value.length; j++) {
@@ -128,26 +97,57 @@
       //     }
       //   }
       //   this.data = newData;
-      //   var div = document.createElement('div');
-      //   document.querySelector('body').appendChild(div);
 
-      //   new Keen.Visualization(this, div, {
-      //     library: "c3",
-      //     chartType: 'spline',
-      //     chartOptions: {
-      //       isStacked: true,
-      //       axis: {
-      //         x: {
-      //           type: 'timeseries',
-      //           tick: {
-      //             format: '%Y-%m-%d'
-      //           }
-      //         }
-      //       }
-      //     },
-      //     labelMapping: labelMapping
-      //   });
+      //   for(i = 0; i < chartTypes.length; i++) {
+      //     var div = document.createElement('div');
+      //     document.querySelector('body').appendChild(div);
+      //     if(chartTypes[i] === 'pie' || chartTypes[i] === 'donut') {
+      //       chartOptions = optionTwo;
+      //     } else {
+      //       chartOptions = optionOne;
+      //     }
+
+      //     new Keen.Visualization(this, div, {
+      //       library: "c3",
+      //       chartType: chartTypes[i],
+      //       chartOptions: chartOptions,
+      //       labelMapping: labelMapping
+      //     });
+
+      //   }
+
       // });
+
+      /**
+       * SINGLE TESTS
+       */
+      keen.run(multiline, function(res) {
+        var newData = res;
+        for (var i = 0; i < res.result.length; i++) {
+          for (var j = 0; j < res.result[i].value.length; j++) {
+            newData.result[i].value[j].result = Math.floor(Math.random() * (500 - 100 + 1)) + 100;
+          }
+        }
+        this.data = newData;
+        var div = document.createElement('div');
+        document.querySelector('body').appendChild(div);
+
+        new Keen.Visualization(this, div, {
+          library: "c3",
+          chartOptions: {
+            isStacked: true,
+            axis: {
+              x: {
+                type: 'timeseries',
+                tick: {
+                  format: '%Y-%m-%d'
+                }
+              }
+            }
+          },
+          labelMapping: labelMapping
+        });
+      });
 
     });
 
